--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,4 +1,4 @@
-{  "homepage": "https://Okiitr.github.io/React",   
+{  "homepage": "https://Okiitr.github.io/React-App",   
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",  
-    "deploy": "gh-pages -b main -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
